feat: sys config/notice APIs, KB exam cleanup, and deploy fixes
Add sys_config/sys_notice migrations and REST APIs; purge JP certify exam corpus and tooling. Fix DeepResearch menu SQL for system_id column, Java 8 test compatibility, moli-ai Maven deps, and kb sync/wiki path alignment. Merge SQL baseline and document AWS EC2 bootstrap.

Co-authored-by: Cursor <cursoragent@cursor.com>